# glicmack

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  snake.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: config.py  main.py
apps/api/src/routes/: catalog.py  generate.py
apps/api/src/services/: ai_parser.py  content_filter.py
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/: celery_app.py
apps/worker/src/tasks/: assemble_task.py  build_task.py  parse_task.py  upload_task.py
apps/worker/src/unity/: project_assembler.py  tile_generator.py  tile_validator.py
