[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glicmack-worker"
version = "0.1.0"
description = "Celery workers for Glicmack generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3,<6.0",
    "redis>=5.0",
    "pydantic>=2.0,<3.0",
    "boto3>=1.34",
    "paramiko>=3.4",
    "python-dotenv>=1.0",
    "glicmack-design-spec",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
